# CactusResidue_ID_Finder

./: .gitignore  CMakeLists.txt  README.md  convert_cif_to_pdb.sh  find_acidic_residues.py  main.py  pyproject.toml  results.csv  results_all.csv
include/: sort.h
include/md/: PDBReader.h  PeriodicTable.h  Residues.h  sorting.h
include/utility/: cmd_coord.h  cmd_dist.h  commandline.h  fileHandler.h  progressBar.h
src/: PDBReader.cpp  PeriodicTable.cpp  Residues.cpp  cmd_coord.cpp  cmd_dist.cpp  main.cpp  sorting.cpp
